<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>underwater_slam</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="sreejib@todo.todo">sreejib</maintainer>
  <license>TODO: License declaration</license>

  <depend>rcply</depend>
  <exec_depend>dvl_pkg</exec_depend>
  <exec_depend>sonar_pkg</exec_depend>
  <exec_depend>camera_pkg</exec_depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>cv_bridge</depend>
  <depend>visualization_msgs</depend>
  <depend>diagnostic_msgs</depend>
  <depend>rviz2</depend>
  <depend>python3-pandas</depend>
  <depend>python3-opencv</depend>
  <depend>python3-scipy</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
